--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "axios": "^1.7.5",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
+    "expo-crypto": "~13.0.2",
     "expo-document-picker": "^12.0.2",
-    "expo-font": "~12.0.9",
+    "expo-font": "^12.0.10",
     "expo-image-picker": "^15.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
@@ -47,7 +48,7 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.10",
-    "expo-crypto": "~13.0.2"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
