--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
     "react-native-web": "~0.19.10",
-    "zustand": "^4.5.5"
+    "zustand": "^4.5.5",
+    "expo-intent-launcher": "~11.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
